Article card almost made. Work is going fast and fine.

--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -1,21 +1,26 @@
 {% block content %}
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid" style="margin-left: 25px; margin-top: 15px; margin-bottom: 15px;">
-            <a class="navbar-brand" href="#">Website name</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light"
+         style="font-size: 20px;
+                font-weight: normal;">
+        <div class="container-fluid" style="margin-left: 35px; margin-top: 15px; margin-bottom: 15px;">
+            <a class="navbar-brand" href="{% url 'home' %}" style="font-weight: bold; font-size: 24px;">Website name</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
+                    <li class="nav-item" style="margin-left: 10px;">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
-                    <li class="nav-item">
+
+                    <li class="nav-item" style="margin-left: 10px;">
                         <a class="nav-link" href="#">Link</a>
                     </li>
-                    <li class="nav-item dropdown">
+
+                    <li class="nav-item dropdown" style="margin-left: 10px;">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                            data-bs-toggle="dropdown" aria-expanded="false">
                             Dropdown
@@ -29,22 +34,25 @@
                             <li><a class="dropdown-item" href="#">Something else here</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item">
+
+                    <li class="nav-item" style="margin-left: 10px;">
                         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
                     </li>
+
                 </ul>
-{#                <form class="d-flex">#}
-{#                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">#}
-{#                    <button class="btn btn-outline-success" type="submit">Search</button>#}
-{#                </form>#}
+
+                {#                <form class="d-flex">#}
+                {#                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">#}
+                {#                    <button class="btn btn-outline-success" type="submit">Search</button>#}
+                {#                </form>#}
             </div>
-            <div class="dropdown text-end" style="margin-right: 25px;">
+            <div class="dropdown text-end" style="margin-right: 35px;">
                 {% if user.is_authenticated %}
                     <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
                        aria-expanded="false">
                         {{ user.email }}
                     </a>
-                    <ul class="dropdown-menu text-small">
+                    <ul class="dropdown-menu text-small" style="right: -150%; left: unset">
                         <li><a class="dropdown-item" href="{% url 'account_change_password' %}">Change password</a></li>
                         <li>
                             <hr class="dropdown-divider">
