--- a/templates/_base.html
+++ b/templates/_base.html
@@ -3,50 +3,61 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-  <title>{% block title %}DjangoX{% endblock title %}</title>
-  <meta name="description" content="A framework for launching new Django projects quickly.">
-  <meta name="author" content="">
-  <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+    <title>
+        {% block title %}
+            DjangoX
+        {% endblock title %}
+    </title>
+    <meta name="description" content="A framework for launching new Django projects quickly.">
+    <meta name="author" content="">
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
 
-  {% block css %}
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    {% block css %}
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+              integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+              crossorigin="anonymous">
 
-  <link rel="stylesheet" href="{% static 'css/base.css' %}">
-  {% endblock %}
+        <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    {% endblock %}
+
+
+    <style type="text/css">
+        #main-container {
+            min-height: 100vh;
+        }
+    </style>
+
+
+    {% block javascript %}
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+                crossorigin="anonymous"></script>
+
+        <script src="{% static 'js/base.js' %}"></script>
+
+    {% endblock javascript %}
 </head>
 
 <body>
-  <header>
-      {% include 'components/navbar.html' %}
-  </header>
+<header>
+    {% include 'components/navbar.html' %}
+</header>
 
-  <div class="container">
+<div class="container" id="main-container">
+
     {% block content %}
-    <p>Default content...</p>
+
     {% endblock content %}
-  </div>
 
-  <footer class="footer">
-    <div class="container">
-      <span class="text-muted">Footer...</span>
-    </div>
-  </footer>
+</div>
 
-  {% block javascript %}
-  <!-- Bootstrap JavaScript -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-    crossorigin="anonymous"></script>
+{#<footer id="footer" class="footer">#}
+{#    {% include 'components/footer.html' %}#}
+{#</footer>#}
 
-  <!-- Project JS -->
-  <script src="{% static 'js/base.js' %}"></script>
-
-  {% endblock javascript %}
 
 </body>
 
