--- a/templates/_base.html
+++ b/templates/_base.html
@@ -27,6 +27,7 @@
     <style type="text/css">
         #main-container {
             min-height: 100vh;
+            max-width: 1100px;
         }
     </style>
 
