--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -23,7 +23,12 @@
                 </div>
 
                 <div class="card-body">
-                    <h3 class="card-title" style="margin-bottom: 2%;">{{ article.name }}</h3>
+                    <h3 class="card-title" style="margin-bottom: 2%;">
+                        <a href="/articles/{{ article.id }}" class="link-secondary"
+                           style="color: black; text-decoration: unset">
+                            {{ article.name }}
+                        </a>
+                    </h3>
 
                     <div style="font-size: 12px; display:flex;">
                         <img src="{% static 'images/clock_icon.png' %}" height="15px" width="15px" alt="">
@@ -40,13 +45,16 @@
 
                     {% for tag in article.tags.all %}
                         <a href="#" class="badge badge-primary"
-                           style="margin-bottom: 1%; font-size: 16px;">{{ tag.name }}</a>
-                        sad
+                           style="margin-bottom: 1%; font-size: 16px; color:#1f8ad5; text-decoration: unset;
+                                  border: 1px solid #175fc9; :hover{color:#143cd2;}">
+                            {{ tag.name|lower }}
+                        </a>
                     {% endfor %}
                     <p class="card-text">
                         {{ article.text|truncatewords:50 }}
                     </p>
-                    <a href="#" class="btn btn-primary" style="margin-top: 1%;">Read article</a>
+                    <a href="/articles/{{ article.id }}" class="btn btn-primary" style="margin-top: 1%;">Read
+                        article</a>
                 </div>
             </div>
         </article>
