--- a/templates/_base.html
+++ b/templates/_base.html
@@ -27,7 +27,8 @@
     <style type="text/css">
         #main-container {
             min-height: 100vh;
-            max-width: 1100px;
+            max-width: 80rem;
+
         }
     </style>
 
@@ -50,10 +51,10 @@
 <div class="container" id="main-container">
 
     {% block content %}
-
     {% endblock content %}
 
 </div>
+
 
 {#<footer id="footer" class="footer">#}
 {#    {% include 'components/footer.html' %}#}
