--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -52,13 +52,16 @@
                        aria-expanded="false">
                         {{ user.email }}
                     </a>
-                    <ul class="dropdown-menu text-small" style="right: -150%; left: unset">
+
+                    <ul class="dropdown-menu text-small" style="margin-left: 3.5rem;">
                         <li><a class="dropdown-item" href="{% url 'account_change_password' %}">Change password</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
                         <li><a class="dropdown-item" href="{% url 'account_logout' %}">Sign out</a></li>
                     </ul>
+
+
 
                 {% else %}
                     <form class="form-inline ml-auto">
