--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -36,7 +36,7 @@
                             <div style="font-size: 12px; display:flex;">
                                 <img src="{% static 'images/clock_icon.png' %}" height="15px" width="15px" alt="">
                                 <p style="margin-left: 1%;">
-                                    5 minutes
+                                    {{ article.text | wordcount }} minute to read
                                 </p>
 
                                 <img src="{% static 'images/views_icon.webp' %}" height="15px" width="15px" alt=""
@@ -67,11 +67,20 @@
         </div>
 
         <div style="flex-direction: column; justify-content: right">
+
             <div>
-                <a href="#" class="btn btn-primary"
-                   style="margin-top: 2rem; width: 14rem; margin-left: 4rem; margin-bottom: 2rem;">
-                    Create article
-                </a>
+                {% if user.is_authenticated %}
+                    <a href="articles/create-article/" class="btn btn-primary"
+                       style="margin-top: 2rem; width: 14rem; margin-left: 4rem; margin-bottom: 2rem;">
+                        Create article
+                    </a>
+                {% else %}
+                    <a class="btn btn-danger disabled"
+                       style="margin-top: 2rem; width: 14rem; margin-left: 4rem; margin-bottom: 2rem;">
+                        Log in to create article
+                    </a>
+                {% endif %}
+
             </div>
 
             <div class="card" style="width: 22rem;">
@@ -79,6 +88,7 @@
                     <h6 style="margin-bottom: 0; margin-left: 2.5%; margin-top: 1%; font-weight: bold;">Best
                         authors</h6>
                     <hr>
+
                     {% for article in top_viewed_articles %}
                         <span style="margin-bottom: 3.5%;">
                             <img src="#" alt="">
