Making progress, a little bit by now

--- a/templates/pages/exact-article-page.html
+++ b/templates/pages/exact-article-page.html
@@ -48,7 +48,7 @@
                 {% endfor %}
 
                 <p class="card-text" style="font-size: 17px; margin-top: 20px;">
-                    {{ article.text }}
+                    {{ article.text|linebreaksbr }}
                 </p>
 
                 <span style="">
