--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -36,7 +36,7 @@
                             <div style="font-size: 12px; display:flex;">
                                 <img src="{% static 'images/clock_icon.png' %}" height="15px" width="15px" alt="">
                                 <p style="margin-left: 1%;">
-                                    {{ article.get_reading_time_in_seconds }} minute to read
+                                    {{ article.reading_time }} minute to read
                                 </p>
 
                                 <img src="{% static 'images/views_icon.webp' %}" height="15px" width="15px" alt=""
@@ -57,7 +57,7 @@
 {#                            <img height="300" width="100%" src="{{ article.logo_image }}" alt="">#}
                         
                             <p class="card-text">
-                                {{ article.text|truncatewords:50 }}
+                                {{ article.text|truncatewords:36 }}
                             </p>
                             <a href="/articles/{{ article.id }}" class="btn btn-primary" style="margin-top: 1%;">
                                 Read article
